# span

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml  start-bot-wrapper.sh  start-bot.sh  start-voice.sh
.claude/: settings.json
docs/: memory-research.md
scripts/: health-check.sh  init_db.py  run_scheduler.py  run_telegram_bot.py  run_voice_server.py  start_session.py  test_curriculum_flow.py  trigger_call.py
span/: __init__.py  config.py  constants.py
span/agent/: scheduler.py
span/curriculum/: content.py  prompts.py  scheduler.py  selector.py  sm2.py  taxonomy.py
span/db/: database.py  models.py
span/llm/: client.py  prompts.py
span/memory/: __init__.py  extractor.py
span/telegram/: .claude_code.py.swp  __main__.py  bot.py  claude_code.py  voice_handler.py
span/voice/: __main__.py  bot.py  dialout.py  news.py  recall.py  server.py  tools.py
tests/: conftest.py  test_claude_code_integration.py  test_config.py  test_curriculum.py  test_database.py  test_llm_client.py  test_memory_extractor.py  test_models.py  test_recall.py  test_scheduler.py  test_sm2.py  test_telegram_bot.py  test_voice_bot.py  test_voice_server.py  test_voice_tools.py
