[project]
name = "span"
version = "0.1.0"
description = "Mexican Spanish learning app with voice calls and Telegram"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "pipecat-ai[daily,openai]",
    "aiogram>=3.0",
    "anthropic",
    "apscheduler>=3.10,<4.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "aiohttp",
    "simple-parsing",
    "rich",
    "python-dotenv",
    "pydub",
    "websockets>=12.0",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["span"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
